# repello-security-agent

./: .gitignore  README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  main.tsx
client/src/pages/: MainContent.tsx  SideBar.tsx  SiteBarItem.tsx  indicator.tsx  logs.tsx  mdFormatter.tsx  messageBubble.tsx
client/src/service/: ApiService.ts
client/src/states/: scroll.tsx
client/src/store/: chat.ts
server/: .env  README.md  pyproject.toml
server/app/: main.py
server/app/routes/: document.py
server/app/template/: promptTemplate.py  rag.py  sanitizer.py
server/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test_documents/: dummy_contacts.docx  dummy_contacts.xlsx  dummy_ecom_invoices.docx  dummy_ecom_invoices.xlsx  nsfw_img.avif  test_invoices.txt  textpdf_img.docx
