[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10" 
dependencies = [
    "fastapi",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.0.10",
    "pdfplumber>=0.11.6",
    "python-multipart>=0.0.20",
    "uvicorn[standard]",
]

# [tool.uv]
# virtualenvs.in-project = true
